--- a/public/draft/config.json
+++ b/public/draft/config.json
@@ -18,25 +18,45 @@
   "devices": [
     {
       "id": "d01",
-      "title": "robot",
+      "title": "smoke bomb",
+      "type": "smoke",
+      "iconKey": "dev-smoke",
+      "pickupRadius": 100,
+      "effectSeconds": 120,
+      "lat": 44.978045,
+      "lng": -93.265462
+    },
+    {
+      "id": "d02",
+      "title": "roaming robot",
       "type": "clone",
       "iconKey": "dev-clone",
-      "pickupRadius": 160,
+      "pickupRadius": 100,
       "effectSeconds": 120,
-      "lat": 44.978764,
-      "lng": -93.267135
+      "lat": 44.978194,
+      "lng": -93.265266
     }
   ],
   "powerups": [
     {
       "id": "d01",
-      "title": "robot",
+      "title": "smoke bomb",
+      "type": "smoke",
+      "iconKey": "dev-smoke",
+      "pickupRadius": 100,
+      "effectSeconds": 120,
+      "lat": 44.978045,
+      "lng": -93.265462
+    },
+    {
+      "id": "d02",
+      "title": "roaming robot",
       "type": "clone",
       "iconKey": "dev-clone",
-      "pickupRadius": 160,
+      "pickupRadius": 100,
       "effectSeconds": 120,
-      "lat": 44.978764,
-      "lng": -93.267135
+      "lat": 44.978194,
+      "lng": -93.265266
     }
   ],
   "media": {
@@ -45,17 +65,17 @@
         "key": "gold-coin",
         "name": "Gold Coin",
         "ability": "Adds a coin to your wallet.",
-        "thumbUrl": "/games/lib/media/bundles/GOLDEN%20COIN.png"
+        "thumbUrl": "/media/bundles/GOLDEN%20COIN.png"
       }
     ],
     "pool": [
-      "/games/lib/media/bundles/ROBOT1small.png",
-      "/games/lib/media/bundles/SMOKE%20BOMB.png",
-      "/games/lib/media/bundles/evidence%202.png",
-      "/games/lib/media/bundles/CLUEgreen.png",
-      "/games/lib/media/bundles/GOLDEN%20COIN.png",
-      "/games/lib/media/bundles/trivia%20icon.png",
-      "/games/lib/media/bundles/trivia%20yellow.png"
+      "/media/bundles/ROBOT1small.png",
+      "/media/bundles/SMOKE%20BOMB.png",
+      "/media/bundles/evidence%202.png",
+      "/media/bundles/CLUEgreen.png",
+      "/media/bundles/GOLDEN%20COIN.png",
+      "/media/bundles/trivia%20icon.png",
+      "/media/bundles/trivia%20yellow.png"
     ]
   },
   "icons": {
@@ -63,41 +83,41 @@
       {
         "key": "trivia",
         "name": "Trivia",
-        "url": "/games/lib/media/bundles/trivia%20icon.png"
+        "url": "/media/bundles/trivia%20icon.png"
       },
       {
         "key": "trivia-2",
         "name": "Trivia 2",
-        "url": "/games/lib/media/bundles/trivia%20yellow.png"
+        "url": "/media/bundles/trivia%20yellow.png"
       }
     ],
     "devices": [
       {
         "key": "dev-clone",
         "name": "Roaming Robot",
-        "url": "/games/lib/media/bundles/ROBOT1small.png"
+        "url": "/media/bundles/ROBOT1small.png"
       },
       {
         "key": "dev-smoke",
         "name": "Smoke Shield",
-        "url": "/games/lib/media/bundles/SMOKE%20BOMB.png"
+        "url": "/media/bundles/SMOKE%20BOMB.png"
       }
     ],
     "rewards": [
       {
         "key": "evidence",
         "name": "Evidence",
-        "url": "/games/lib/media/bundles/evidence%202.png"
+        "url": "/media/bundles/evidence%202.png"
       },
       {
         "key": "clue",
         "name": "Clue",
-        "url": "/games/lib/media/bundles/CLUEgreen.png"
+        "url": "/media/bundles/CLUEgreen.png"
       },
       {
         "key": "gold-coin",
         "name": "Gold Coin",
-        "url": "/games/lib/media/bundles/GOLDEN%20COIN.png"
+        "url": "/media/bundles/GOLDEN%20COIN.png"
       }
     ]
   },
