--- a/game/public/games/secret-agent-paws/draft/config.json
+++ b/game/public/games/secret-agent-paws/draft/config.json
@@ -23,17 +23,17 @@
         "key": "gold-coin",
         "name": "Gold Coin",
         "ability": "Adds a coin to your wallet.",
-        "thumbUrl": "/games/lib/media/bundles/GOLDEN%20COIN.png"
+        "thumbUrl": "/media/bundles/GOLDEN%20COIN.png"
       }
     ],
     "pool": [
-      "/games/lib/media/bundles/ROBOT1small.png",
-      "/games/lib/media/bundles/SMOKE%20BOMB.png",
-      "/games/lib/media/bundles/evidence%202.png",
-      "/games/lib/media/bundles/CLUEgreen.png",
-      "/games/lib/media/bundles/GOLDEN%20COIN.png",
-      "/games/lib/media/bundles/trivia%20icon.png",
-      "/games/lib/media/bundles/trivia%20yellow.png"
+      "/media/bundles/ROBOT1small.png",
+      "/media/bundles/SMOKE%20BOMB.png",
+      "/media/bundles/evidence%202.png",
+      "/media/bundles/CLUEgreen.png",
+      "/media/bundles/GOLDEN%20COIN.png",
+      "/media/bundles/trivia%20icon.png",
+      "/media/bundles/trivia%20yellow.png"
     ]
   },
   "icons": {
@@ -41,41 +41,46 @@
       {
         "key": "trivia",
         "name": "Trivia",
-        "url": "/games/lib/media/bundles/trivia%20icon.png"
+        "url": "/media/bundles/trivia%20icon.png"
       },
       {
         "key": "trivia-2",
         "name": "Trivia 2",
-        "url": "/games/lib/media/bundles/trivia%20yellow.png"
+        "url": "/media/bundles/trivia%20yellow.png"
+      },
+      {
+        "key": "missions-3",
+        "name": "Clue",
+        "url": "/media/bundles/CLUEgreen.png"
       }
     ],
     "devices": [
       {
         "key": "dev-clone",
         "name": "Roaming Robot",
-        "url": "/games/lib/media/bundles/ROBOT1small.png"
+        "url": "/media/bundles/ROBOT1small.png"
       },
       {
         "key": "dev-smoke",
         "name": "Smoke Shield",
-        "url": "/games/lib/media/bundles/SMOKE%20BOMB.png"
+        "url": "/media/bundles/SMOKE%20BOMB.png"
       }
     ],
     "rewards": [
       {
         "key": "evidence",
         "name": "Evidence",
-        "url": "/games/lib/media/bundles/evidence%202.png"
+        "url": "/media/bundles/evidence%202.png"
       },
       {
         "key": "clue",
         "name": "Clue",
-        "url": "/games/lib/media/bundles/CLUEgreen.png"
+        "url": "/media/bundles/CLUEgreen.png"
       },
       {
         "key": "gold-coin",
         "name": "Gold Coin",
-        "url": "/games/lib/media/bundles/GOLDEN%20COIN.png"
+        "url": "/media/bundles/GOLDEN%20COIN.png"
       }
     ]
   },
