--- a/game/public/games/secret-agent-paws/config.json
+++ b/game/public/games/secret-agent-paws/config.json
@@ -15,30 +15,8 @@
     "alertMinutes": 10
   },
   "textRules": [],
-  "devices": [
-    {
-      "id": "d01",
-      "title": "fff",
-      "type": "smoke",
-      "iconKey": "smoke-shield",
-      "pickupRadius": 100,
-      "effectSeconds": 120,
-      "lat": 44.977888,
-      "lng": -93.265424
-    }
-  ],
-  "powerups": [
-    {
-      "id": "d01",
-      "title": "fff",
-      "type": "smoke",
-      "iconKey": "smoke-shield",
-      "pickupRadius": 100,
-      "effectSeconds": 120,
-      "lat": 44.977888,
-      "lng": -93.265424
-    }
-  ],
+  "devices": [],
+  "powerups": [],
   "media": {
     "rewardsPool": [],
     "penaltiesPool": []
@@ -48,7 +26,7 @@
       {
         "key": "trivia",
         "name": "Trivia",
-        "url": "/media/bundles/trivia%20icon.png"
+        "url": "/media/bundles/evidence%202.png"
       },
       {
         "key": "trivia-2",
