update public/games/secret-agent-paws/config.json via Admin UI

--- a/public/games/secret-agent-paws/config.json
+++ b/public/games/secret-agent-paws/config.json
@@ -49,6 +49,16 @@
         "key": "1759695064697-3-ring-answer-03-mission-complete-",
         "name": "1759695064697 3 ring answer 03 mISSION COMPLETE 32",
         "url": "/media/uploads/1759695064697-3_ring_answer_03_mISSION_COMPLETE_32_.jpg"
+      },
+      {
+        "key": "trivia",
+        "name": "Trivia",
+        "url": "/media/bundles/trivia%20icon.png"
+      },
+      {
+        "key": "trivia-2",
+        "name": "Trivia 2",
+        "url": "/media/bundles/trivia%20yellow.png"
       }
     ],
     "devices": [
@@ -73,6 +83,16 @@
         "key": "clue",
         "name": "Clue",
         "url": "/media/bundles/CLUEgreen.png"
+      },
+      {
+        "key": "evidence",
+        "name": "Evidence",
+        "url": "/media/bundles/evidence%202.png"
+      },
+      {
+        "key": "gold-coin",
+        "name": "Gold Coin",
+        "url": "/media/bundles/GOLDEN%20COIN.png"
       }
     ]
   },
