--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "esx-admin-control-panel-map",
-  "version": "1.2.0",
+  "name": "esx-game",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "2.2.5"
   }
 }
