--- a/game/package.json
+++ b/game/package.json
@@ -13,5 +13,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "2.2.5"
+  },
+  "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.2.77",
+    "@types/react-dom": "18.2.25",
+    "typescript": "5.5.4"
   }
 }
