--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.2.77",
+    "@types/react-dom": "18.2.25",
+    "typescript": "5.5.4"
   }
 }
