--- a/game/public/games/secret-agent-paws/config.json
+++ b/game/public/games/secret-agent-paws/config.json
@@ -5,7 +5,8 @@
   },
   "game": {
     "title": "Secret Agent PAWS",
-    "type": "Mystery"
+    "type": "Mystery",
+    "coverImage": ""
   },
   "forms": {
     "players": 1
