--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -5,7 +5,8 @@
   },
   "game": {
     "title": "Newbie",
-    "type": "Thriller"
+    "type": "Thriller",
+    "coverImage": ""
   },
   "forms": {
     "players": 1
