--- a/game/public/games/up/config.json
+++ b/game/public/games/up/config.json
@@ -5,7 +5,11 @@
   },
   "game": {
     "title": "up",
-    "type": "Mystery"
+    "type": "Mystery",
+    "tags": [
+      "up"
+    ],
+    "coverImage": ""
   },
   "forms": {
     "players": 1
