--- a/game/public/games/best-ty/draft/config.json
+++ b/game/public/games/best-ty/draft/config.json
@@ -5,7 +5,11 @@
   },
   "game": {
     "title": "best ty",
-    "type": "Mystery"
+    "type": "Mystery",
+    "tags": [
+      "best-ty"
+    ],
+    "coverImage": ""
   },
   "forms": {
     "players": 1
