--- a/game/public/games/newbie/draft/config.json
+++ b/game/public/games/newbie/draft/config.json
@@ -5,7 +5,11 @@
   },
   "game": {
     "title": "Newbie",
-    "type": "Thriller"
+    "type": "Thriller",
+    "tags": [
+      "newbie"
+    ],
+    "coverImage": ""
   },
   "forms": {
     "players": 1
