--- a/public/games/default/draft/config.json
+++ b/public/games/default/draft/config.json
@@ -67,18 +67,18 @@
   "appearance": {
     "fontFamily": "system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif",
     "fontSizePx": 22,
-    "fontColor": "#ffffff",
-    "textBgColor": "#000000",
-    "textBgOpacity": 0,
-    "screenBgColor": "#000000",
-    "screenBgOpacity": 0,
+    "fontColor": "#f8fafc",
+    "textBgColor": "#020617",
+    "textBgOpacity": 0.35,
+    "screenBgColor": "#0b0c10",
+    "screenBgOpacity": 0.75,
     "screenBgImage": "",
     "screenBgImageEnabled": true,
     "textAlign": "center",
     "textVertical": "top",
     "panelDepth": true
   },
-  "appearanceSkin": "custom",
+  "appearanceSkin": "dark",
   "appearanceTone": "dark",
   "mediaTriggers": {
     "enabled": false,
