--- a/public/games/jjj/config.json
+++ b/public/games/jjj/config.json
@@ -14,5 +14,25 @@
   "forms": {
     "players": 1
   },
-  "textRules": []
+  "textRules": [],
+  "theme": {
+    "splash": {
+      "fontFamily": "\"Rajdhani\", \"Segoe UI\", sans-serif",
+      "fontSize": 32,
+      "textColor": "#f4f7ff",
+      "align": "center",
+      "backgroundColor": "#050914",
+      "backgroundImageUrl": "/media/covers/escape-grid.svg",
+      "backgroundSize": "cover"
+    },
+    "missionDefault": {
+      "fontFamily": "\"Source Sans Pro\", \"Segoe UI\", sans-serif",
+      "fontSize": 20,
+      "textColor": "#f4f7ff",
+      "align": "left",
+      "backgroundColor": "#081123",
+      "backgroundImageUrl": "/media/covers/escape-grid.svg",
+      "backgroundSize": "cover"
+    }
+  }
 }
