--- a/public/games/mike/config.json
+++ b/public/games/mike/config.json
@@ -19,5 +19,25 @@
     "alertMinutes": 10
   },
   "textRules": [],
-  "powerups": []
+  "powerups": [],
+  "theme": {
+    "splash": {
+      "fontFamily": "\"Rajdhani\", \"Segoe UI\", sans-serif",
+      "fontSize": 32,
+      "textColor": "#f4f7ff",
+      "align": "center",
+      "backgroundColor": "#050914",
+      "backgroundImageUrl": "/media/covers/escape-grid.svg",
+      "backgroundSize": "cover"
+    },
+    "missionDefault": {
+      "fontFamily": "\"Source Sans Pro\", \"Segoe UI\", sans-serif",
+      "fontSize": 20,
+      "textColor": "#f4f7ff",
+      "align": "left",
+      "backgroundColor": "#081123",
+      "backgroundImageUrl": "/media/covers/escape-grid.svg",
+      "backgroundSize": "cover"
+    }
+  }
 }
