--- a/public/games/default/draft/config.json
+++ b/public/games/default/draft/config.json
@@ -4,14 +4,13 @@
     "mode": "single"
   },
   "game": {
-    "title": "Untitled Game",
+    "title": "DEFAULT",
     "type": "Mystery",
     "tags": [
       "default",
       "default-game"
     ],
-    "coverImage": "/media/covers/1760532373127-casper.jpg",
-    "deployEnabled": false
+    "coverImage": ""
   },
   "forms": {
     "players": 1
@@ -70,21 +69,22 @@
       }
     ]
   },
-  "appearanceSkin": "starfield-dawn",
   "appearance": {
-    "fontFamily": "\"Exo 2\", \"Segoe UI\", sans-serif",
-    "fontSizePx": 23,
-    "fontColor": "#262a58",
-    "textBgColor": "#f4f0ff",
-    "textBgOpacity": 0.7,
-    "screenBgColor": "#e0dcfa",
-    "screenBgOpacity": 0.46,
-    "screenBgImage": "/media/skins/starfield-dawn.svg",
-    "textAlign": "center",
+    "fontFamily": "system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif",
+    "fontSizePx": 22,
+    "fontColor": "#1f2a35",
+    "textBgColor": "#f4f8fb",
+    "textBgOpacity": 0.76,
+    "screenBgColor": "#dbe4f1",
+    "screenBgOpacity": 0.45,
+    "screenBgImage": "/media/skins/control-fabric.svg",
+    "screenBgImageEnabled": true,
+    "textAlign": "left",
     "textVertical": "top",
-    "screenBgImageEnabled": true
+    "panelDepth": true
   },
-  "appearanceTone": "light",
+  "appearanceSkin": "default",
+  "appearanceTone": "dark",
   "mediaTriggers": {
     "enabled": false,
     "actionType": "media",
@@ -103,5 +103,26 @@
   },
   "geofence": {
     "mode": "test"
-  }
+  },
+  "theme": {
+    "splash": {
+      "fontFamily": "Georgia, serif",
+      "fontSize": 24,
+      "textColor": "#f1f5f9",
+      "align": "left",
+      "backgroundColor": "#0f172a",
+      "backgroundImageUrl": "",
+      "backgroundSize": "cover"
+    },
+    "missionDefault": {
+      "fontFamily": "system-ui, Arial, sans-serif",
+      "fontSize": 18,
+      "textColor": "#f8fafc",
+      "align": "center",
+      "backgroundColor": "#111827",
+      "backgroundImageUrl": "",
+      "backgroundSize": "cover"
+    }
+  },
+  "gameOrigin": "http://localhost:4000"
 }
