--- a/public/games/game-1-thriller-single-player/draft/config.json
+++ b/public/games/game-1-thriller-single-player/draft/config.json
@@ -4,11 +4,10 @@
     "mode": "single"
   },
   "game": {
-    "title": "DEFAULT",
+    "title": "Untitled Game",
     "type": "Mystery",
     "tags": [
-      "default",
-      "default-game"
+      "game-1-thriller-single-player"
     ],
     "coverImage": ""
   },
@@ -70,7 +69,7 @@
     ]
   },
   "appearance": {
-    "fontFamily": "system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif",
+    "fontFamily": "\"Orbitron\", \"Rajdhani\", sans-serif",
     "fontSizePx": 22,
     "fontColor": "#1f2a35",
     "textBgColor": "#f4f8fb",
@@ -103,26 +102,5 @@
   },
   "geofence": {
     "mode": "test"
-  },
-  "theme": {
-    "splash": {
-      "fontFamily": "Georgia, serif",
-      "fontSize": 24,
-      "textColor": "#f1f5f9",
-      "align": "left",
-      "backgroundColor": "#0f172a",
-      "backgroundImageUrl": "",
-      "backgroundSize": "cover"
-    },
-    "missionDefault": {
-      "fontFamily": "system-ui, Arial, sans-serif",
-      "fontSize": 18,
-      "textColor": "#f8fafc",
-      "align": "center",
-      "backgroundColor": "#111827",
-      "backgroundImageUrl": "",
-      "backgroundSize": "cover"
-    }
-  },
-  "gameOrigin": "http://localhost:4000"
+  }
 }
