--- a/public/games/best-ty/config.json
+++ b/public/games/best-ty/config.json
@@ -5,11 +5,7 @@
   },
   "game": {
     "title": "best ty",
-    "type": "Mystery",
-    "tags": [
-      "best-ty"
-    ],
-    "coverImage": ""
+    "type": "Mystery"
   },
   "forms": {
     "players": 1
