--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -5,11 +5,7 @@
   },
   "game": {
     "title": "Newbie",
-    "type": "Thriller",
-    "tags": [
-      "newbie"
-    ],
-    "coverImage": ""
+    "type": "Thriller"
   },
   "forms": {
     "players": 1
