--- a/public/games/secret-agent-paws/draft/config.json
+++ b/public/games/secret-agent-paws/draft/config.json
@@ -5,11 +5,7 @@
   },
   "game": {
     "title": "Secret Agent PAWS",
-    "type": "Mystery",
-    "tags": [
-      "secret-agent-paws"
-    ],
-    "coverImage": ""
+    "type": "Mystery"
   },
   "forms": {
     "players": 1
